@@ -1,4 +1,4 @@
-# copyright 2003-2011 LOGILAB S.A. (Paris, FRANCE), all rights reserved.
+# copyright 2003-2013 LOGILAB S.A. (Paris, FRANCE), all rights reserved.
 # contact http://www.logilab.fr/ -- mailto:contact@logilab.fr
 #
 # This file is part of logilab-database.
@@ -22,14 +22,58 @@ __docformat__ = "restructuredtext en"
 
 # SQLGenerator ################################################################
 
+class SQLExpression(object):
+    """Use this class when you need direct SQL expression in statements
+    generated by SQLGenerator. Arguments:
+
+    - a sqlstring that defines the SQL expression to be used, e.g. 'YEARS(%(date)s)'
+
+    - kwargs that define the values to be substituted in the SQL expression,
+      e.g. date='2013/01/01'
+
+    E.g. the SQL expression SQLExpression('YEARS(%(date)s)', date='2013/01/01')
+    will yield:
+
+    '..., age = YEARS(%(date)s), ...' in a SQL statement
+
+    and will modify accordingly the parameters:
+
+    {'date': '2013/01/01', ...}
+    """
+
+    def __init__(self, sqlstring, **kwargs):
+        self.sqlstring = sqlstring
+        self.kwargs = kwargs
+
+
 class SQLGenerator :
     """
     Helper class to generate SQL strings to use with python's DB-API.
     """
+    def _iterate_params(self, params):
+        """ Iterate a parameters dictionnary and yield the correct column name
+        and value (base types or SQL functions) """
+        # sort for predictability
+        for column, value in sorted(params.items()):
+            if isinstance(value, SQLExpression):
+                # In this case the value that should be substitued
+                # is not anymore the one in params, but is passed as kwargs
+                # in the SQLExpression
+                # E.g. 'age': SQLExpression('YEARS(%(date)s)', date='2013/01/01')
+                # will create the statement
+                # age = YEARS(%(date)s)
+                # and thus, the params dictionnary should have a 'date': '2013/01/01'
+                # for correct substitution
+                params.update(value.kwargs)
+                params.pop(column)
+                yield column, value.sqlstring
+            else:
+                yield column, "%%(%s)s" % column
 
     def where(self, keys, addon=None):
         """
         :param keys: list of keys
+        :param addon: additional sql statement
 
         >>> s = SQLGenerator()
         >>> s.where(['nom'])
@@ -39,7 +83,11 @@ class SQLGenerator :
         >>> s.where(['nom','prenom'], 'x.id = y.id')
         'x.id = y.id AND nom = %(nom)s AND prenom = %(prenom)s'
         """
-        restriction = ["%s = %%(%s)s" % (x, x) for x in keys]
+        # Do not need SQLExpression here, as we have the addon argument.
+        if isinstance(keys, dict):
+            restriction = ["%s = %s" % (col, val) for col, val in self._iterate_params(keys)]
+        else:
+            restriction = ["%s = %%(%s)s" % (x, x) for x in keys]
         if addon:
             restriction.insert(0, addon)
         return " AND ".join(restriction)
@@ -54,22 +102,33 @@ class SQLGenerator :
         >>> s.set(['nom','prenom'])
         'nom = %(nom)s, prenom = %(prenom)s'
         """
-        return ", ".join(["%s = %%(%s)s" % (x, x) for x in keys])
+        if isinstance(keys, dict):
+            set_parts = ["%s = %s" % (col, val) for col, val in self._iterate_params(keys)]
+        else:
+            set_parts = ["%s = %%(%s)s" % (x, x) for x in keys]
+        return ", ".join(set_parts)
 
     def insert(self, table, params):
         """
         :param table: name of the table
         :param params:  dictionary that will be used as in cursor.execute(sql,params)
-
         >>> s = SQLGenerator()
         >>> s.insert('test',{'nom':'dupont'})
         'INSERT INTO test ( nom ) VALUES ( %(nom)s )'
-        >>> s.insert('test',{'nom':'dupont','prenom':'jean'})
-        'INSERT INTO test ( nom, prenom ) VALUES ( %(nom)s, %(prenom)s )'
+        >>> params = {'nom':'dupont', 'prenom':'jean',
+        ...          'age': SQLExpression('YEARS(%(date)s)', date='2013/01/01')}
+        >>> s.insert('test', params)
+        'INSERT INTO test ( age, nom, prenom ) VALUES ( YEARS(%(date)s), %(nom)s, %(prenom)s )'
+        >>> params['date'] # params has been modified
+        '2013/01/01'
         """
-        keys = ', '.join(params.keys())
-        values = ', '.join(["%%(%s)s" % x for x in params])
-        sql = 'INSERT INTO %s ( %s ) VALUES ( %s )' % (table, keys, values)
+        columns = []
+        values = []
+        # sort for predictability
+        for column, value in self._iterate_params(params):
+            columns.append(column)
+            values.append(value)
+        sql = 'INSERT INTO %s ( %s ) VALUES ( %s )' % (table, ', '.join(columns), ', '.join(values))
         return sql
 
     def select(self, table, params=None, selection=None):
@@ -88,10 +147,9 @@ class SQLGenerator :
         if selection is None:
             sql = 'SELECT * FROM %s' % table
         else:
-            sql = 'SELECT %s FROM %s' % (','.join(col for col in selection),
-                                         table)
+            sql = 'SELECT %s FROM %s' % (','.join(col for col in selection), table)
         if params is not None:
-            where = self.where(params.keys())
+            where = self.where(params)
             if where :
                 sql = sql + ' WHERE %s' % where
         return sql
@@ -114,12 +172,12 @@ class SQLGenerator :
         sql = 'SELECT %s FROM %s' % (', '.join(model), ', '.join(table_names))
         if joins and type(joins) != type(''):
             joins = ' AND '.join(joins)
-        where = self.where(params.keys(), joins)
+        where = self.where(params, joins)
         if where :
             sql = sql + ' WHERE %s' % where
         return sql
 
-    def delete(self, table, params) :
+    def delete(self, table, params, addon=None) :
         """
         :param table: name of the table
         :param params: dictionary that will be used as in cursor.execute(sql,params)
@@ -130,24 +188,21 @@ class SQLGenerator :
         >>> s.delete('test',{'nom':'dupont','prenom':'jean'})
         'DELETE FROM test WHERE nom = %(nom)s AND prenom = %(prenom)s'
         """
-        where = self.where(params.keys())
+        where = self.where(params, addon=addon)
         sql = 'DELETE FROM %s WHERE %s' % (table, where)
         return sql
 
     def delete_many(self, table, params):
-        restriction = []
-        to_pop = []
-        for col, value in params.iteritems():
-            if value.startswith('('): # we want IN
-                restriction.append('%s IN %s' % (col, value))
-                to_pop.append(col)
-            else:
-                restriction.append("%s = %%(%s)s" % (col, col))
-        for col in to_pop:
-            del params[col]
-        where = " AND ".join(restriction)
-        sql = 'DELETE FROM %s WHERE %s' % (table, where)
-        return sql
+        """ Delete many using the IN clause
+        """
+        addons = []
+        for key, value in params.items():
+            if not isinstance(value, SQLExpression) and value.startswith('('): # we want IN
+                addons.append('%s IN %s' % (key, value))
+                # The value is pop as it is not needed for substitution
+                # (the value is directly written in the SQL IN statement)
+                params.pop(key)
+        return self.delete(table, params, addon=' AND '.join(addons))
 
     def update(self, table, params, unique) :
         """
@@ -161,7 +216,16 @@ class SQLGenerator :
         'UPDATE test SET nom = %(nom)s, prenom = %(prenom)s WHERE id = %(id)s'
         """
         where = self.where(unique)
-        set = self.set([key for key in params if key not in unique])
+        # Remove the unique keys from the params dictionnary
+        unique_params = {}
+        for key, value in params.items():
+            if key in unique:
+                params.pop(key)
+                unique_params[key] = value
+        set = self.set(params)
+        # Add the removed unique params to the (now possibly updated)
+        # params dict (if there were some SQLExpressions)
+        params.update(unique_params)
         sql = 'UPDATE %s SET %s WHERE %s' % (table, set, where)
         return sql
 
